Jwt, Authentication and Authorization   implemented

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Token": {
+    "Issuer": "www.onurkus.com",
+    "Audience": "www.onurkus.com",
+    "SecurityKey":"My super secret key"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
